Spacing Issue (take 3)

--- a/css/references.css
+++ b/css/references.css
@@ -74,7 +74,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 930px;
+  top: 925px;
 }
 /* -----------------------------------------*/
 
@@ -86,7 +86,7 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1100x;
+  top: 1175x;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -97,7 +97,7 @@
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 1200px;
+  top: 1250px;
 }
 /* -----------------------------------------*/
 
